[gd_scene load_steps=3 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://assets/Sprites/HUD/RPGIconsExtra/icon_71.png" type="Texture" id=2]

[node name="Control" type="Control"]
pause_mode = 2
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="Panel" type="Panel" parent="."]
margin_left = -15.8716
margin_top = 3.0
margin_right = 1004.13
margin_bottom = 598.0

[node name="ItemList" type="ItemList" parent="Panel"]
margin_left = 35.0
margin_top = 21.0
margin_right = 465.0
margin_bottom = 322.0
max_columns = 4
same_column_width = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 523.0
margin_top = 29.0
margin_right = 987.0
margin_bottom = 204.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 464.0
margin_bottom = 57.0
size_flags_vertical = 7
custom_colors/font_color = Color( 0.0858154, 0.578125, 0.128123, 1 )
text = "CURRENT ITEMS"
align = 1
valign = 1

[node name="Currentitems" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 61.0
margin_right = 464.0
margin_bottom = 175.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="item1" type="TextureRect" parent="Panel/VBoxContainer/Currentitems"]
margin_right = 230.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="item2" type="TextureRect" parent="Panel/VBoxContainer/Currentitems"]
margin_left = 234.0
margin_right = 464.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel"]
margin_left = 582.0
margin_top = 350.0
margin_right = 889.0
margin_bottom = 476.0

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer2"]
margin_right = 307.0
margin_bottom = 40.0
size_flags_vertical = 3
texture = ExtResource( 2 )

[node name="ItemList2" type="ItemList" parent="Panel/VBoxContainer2"]
margin_top = 44.0
margin_right = 307.0
margin_bottom = 126.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
max_columns = 4
fixed_icon_size = Vector2( 64, 64 )

